[package]
authors = ["The Rust Project Developers"]
description = "External iterators for generic mathematics"
documentation = "https://docs.rs/num-iter"
homepage = "https://github.com/rust-num/num-iter"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num-iter"
name = "num-iter"
version = "0.1.35"
readme = "README.md"

[dependencies]

[dependencies.num-integer]
version = "0.1.36"
default-features = false

[dependencies.num-traits]
version = "0.2.0"
default-features = false

[features]
default = ["std"]
std = []
